tests/boxmodels/radius.scss
@use "salt";

////////////////////////////////////////////////////////////////////////////////
//
//   Radius
//
////////////////////////////////////////////////////////////////////////////////

.radius{
  // pill: salt.radius('pill');
  // none: salt.radius('none');
  // circle: salt.radius('circle');
  // default: salt.radius('default');
  // error: salt.radius('foo');
}
